# 42_cursus_reload

./: .gitignore  .gitmodules  README.md
a-maze-ing/: .gitignore  .pre-commit-config.yaml  HOOKS_SETUP.md  LICENSE  Makefile  README.md  a_maze_ing.py  config.txt  mazegen-0.1.2-py3-none-any.whl  pyproject.toml  requirements.txt
a-maze-ing/.github/: CODEOWNERS
a-maze-ing/.github/hooks/: pre-commit-lint-build.sh
a-maze-ing/.github/prompts/: create-readme.prompt.md
a-maze-ing/context/: README.md  acceptance_criteria.md  algorithms.md  api_reference.md  architecture.md  compliance.md  configuration.md  known_issues.md  overview.md  subject_requirements.md  test_cases.md  test_results.md  testing.md
a-maze-ing/inc/mlx/: mlx.pyi
a-maze-ing/src/config/: enums.py
a-maze-ing/src/core/: maze_generator.py  seed_file.py  solve_maze.py
a-maze-ing/src/model/: cell.py  maze.py  seed.py
a-maze-ing/src/parser/: config_model.py  ft_parser_config.py
a-maze-ing/src/utils/: utils_maze.py
a-maze-ing/src/visual/: print_ascii.py  print_minilib.py  print_seed_ascii.py
a-maze-ing/tests/: test_a_maze_ing.py  test_acceptance.py  test_parser_config.py  tests.py
call_me_maybe/: .gitignore  Makefile  README.md  main.py  pyproject.toml
call_me_maybe/data/input/: function_calling_tests.json  functions_definition_corrupt.json  functions_definition_flo.json
call_me_maybe/data/output/: function_calls.json
call_me_maybe/llm_sdk/llm_sdk/: __init__.py
call_me_maybe/playground/: Copy_of_Mastering_Structured_Ouputs_in_LLMs_Constrained_Generation.ipynb  get_logits.py  prompts  toy_program.py  toy_program2.py
call_me_maybe/playgroung/: get_logics.py
call_me_maybe/resources/: moulinette_instructions.txt
call_me_maybe/src/: __main__.py  prompt.py
call_me_maybe/src/enums/: enums.py
call_me_maybe/src/logic/: get_params.py  logic.py  param_adaptor.py  print_result.py
call_me_maybe/src/masks/: masks.py
call_me_maybe/src/parser/: parser.py
call_me_maybe/src/prompt/: prompt.py
call_me_maybe/src/validator/: func_call_validator.py  func_def_validator.py  output_json_validator.py  path_validator.py
codexion/: Makefile  (+5 more)
fly-in/: .gitignore  Makefile  README.md  fly-in.py  fly_in.drawio  pyproject.toml  requirements.txt
fly-in/maps/challenger/: 01_the_impossible_dream.txt
fly-in/maps/easy/: 01_linear_path_test.txt  02_simple_fork.txt
fly-in/maps/hard/: 03_ultimate_challenge.txt
fly-in/maps/medium/: 02_circular_loop.txt
fly-in/src/conf/: enums.py
fly-in/src/hub/: hub.py
fly-in/src/objs/: a_star.py  connection.py  dron.py  drone.py  grapth.py  grid.py  hub.py  routing.py  routing_copy.py  simulation.py
fly-in/src/parsing/: data_load.py  data_model.py  data_model_connects.py  map_parsing.py
python_piscine/module_08/ex1/: loading.py  pyproject.toml  requirements.txt
(+401 files in other folders)
