[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "icecream>=2.2.0",
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
    "llm-sdk == 0.1.0",
]

[tool.uv.workspace]
members = [
    ".",
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true }
