[project]
name = "loading"
version = "0.1.0"
description = "Program to check dependencies"
authors = [
    {name = "joflorid@student.42urduliz.com"}
]
requires-python = "^3.11"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
